[gd_scene load_steps=4 format=3 uid="uid://0j7v73l8vhhm"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_2l1dg"]
[ext_resource type="Texture2D" uid="uid://cx3dfc87rm04h" path="res://art/UIElement.svg" id="2_shwy2"]

[sub_resource type="LabelSettings" id="LabelSettings_3s258"]
font_size = 24
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2l1dg")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -116.0
offset_right = 253.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_shwy2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.5
offset_top = -64.5
offset_right = 204.5
offset_bottom = 64.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_bottom = 15

[node name="Title" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Spoiled Harvest
"
label_settings = SubResource("LabelSettings_3s258")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="ResumeButton" type="Button" parent="VBoxContainer/ResumeMargin"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="PlayMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 150

[node name="ResetButton" type="Button" parent="VBoxContainer/PlayMargin"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart Level"

[node name="ControlMargin" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 150

[node name="ToBaseButton" type="Button" parent="VBoxContainer/ControlMargin"]
unique_name_in_owner = true
layout_mode = 2
text = "To Level Select"
